@@ -11,4 +11,4 @@ RESTRICT=test
 SLOT=0
 SRC_URI=http://winetricks.org/download/releases/winetricks-20141130.tar.gz gtk? ( http://dev.gentoo.org/~tetromino/distfiles/wine/winetricks-gentoo-2012.11.24.tar.bz2 ) kde? ( http://dev.gentoo.org/~tetromino/distfiles/wine/winetricks-gentoo-2012.11.24.tar.bz2 )
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece
-_md5_=5f7a37289b888f697309120ba42e7489
+_md5_=139955a052a4a2ad81f3a042cfa729a6
